# vsu-forum

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.zed/: tasks.json
vsu-forum-backend/: .env.example  .gitignore  Cargo.toml  config.toml.example
vsu-forum-backend/migrations/: 20240918121646_init.sql  20240924061744_init.sql
vsu-forum-backend/scripts/: fill_example_data.sql  fill_example_data_c.sql  run.sh
vsu-forum-backend/src/: config.rs  errors.rs  extractors.rs  main.rs  state.rs  tools.rs
vsu-forum-backend/src/dto/: available_reactions.rs  bookmark.rs  claims.rs  common.rs  error.rs  errors.rs  mod.rs  post.rs  posts.rs  reactions.rs  report.rs  reports.rs  search.rs  stats.rs  topic.rs  topic_categories.rs  topic_category.rs  topics.rs  user.rs  user_dtos.rs  users.rs
vsu-forum-backend/src/handlers/: available_reactions.rs  bookmarks.rs  mod.rs  posts.rs  reactions.rs  reports.rs  search.rs  stats.rs  topics.rs  topics_categories.rs  users.rs
vsu-forum-backend/src/middlewares/: auth.rs
vsu-forum-backend/src/models/: available_reaction.rs  bookmark.rs  mod.rs  post.rs  reaction.rs  reactions.rs  report.rs  topic.rs  topic_category.rs  user.rs
vsu-forum-backend/src/services/: mod.rs
vsu-forum-frontend/: README.md  bun.lockb  index.html  package.json
vsu-forum-frontend/src/: App.vue  main.js  router.js
vsu-forum-frontend/src/assets/: main.css
vsu-forum-frontend/src/components/: AvailableReactions.vue  BookmarkedTopics.vue  MainPage.vue  ReportsPage.vue  StatsPage.vue  TopicCreationPage.vue  TopicPage.vue  UserLogin.vue  (+2 more)
(+2 files in other folders)
