[package]
name = "vsu-forum-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4" }
thiserror = { version = "1.0" }
async-trait = { version = "0.1" }
validator = { version = "0.18", features = ["derive"] }
jsonwebtoken = "9"
sha3 = { version = "0.10" }
axum = {version = "0.7", features = ["macros"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "migrate", "macros" ] }
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
tower-http = { version = "0.6.1", features = ["catch-panic"] }
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.13" }
env_logger = { version = "0.11" }
log = { version = "0.4" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.16" }
http = "1.1.0"
